--- a/WindowsFormsAppControleVendas/WindowsFormsAppControleVendas/App.config
+++ b/WindowsFormsAppControleVendas/WindowsFormsAppControleVendas/App.config
@@ -17,7 +17,7 @@
   </runtime>
 
 	<connectionStrings>
-		<add name="bdvendas" connectionString="server=192.168.100.22; user ID=alisson; password=@Lisson030114; database=bdvendas"
+		<add name="bdvendas" connectionString="server=192.168.100.22; user ID=alisson; password=pass; database=bdvendas"
 			 providerName="MySql.Data.MySqlClient;"/>		
 	</connectionStrings>
 </configuration>
